# zuul-scs-jobs

./: .ansible-lint  README.md  setup.cfg  tox.ini
playbooks/base/: post-logs.yaml  post.yaml  pre.yaml
playbooks/container-image/: pre.yaml  upload.yaml
playbooks/container-images/: README.rst
playbooks/openstack/: access.yaml  post.yaml  pre.yaml
playbooks/openstack/templates/: secure.yaml.j2
playbooks/sbom/: post-sbom.yaml  pre.yaml  run-containers.yaml
roles/create-vault-approle-token/tasks/: main.yaml
roles/ensure-syft/defaults/: main.yaml
roles/ensure-syft/tasks/: main.yaml
roles/ensure-trivy/defaults/: main.yaml
roles/ensure-trivy/tasks/: main.yaml
roles/generate-sbom-syft/: README.rst
roles/generate-sbom-syft/defaults/: main.yaml
roles/generate-sbom-syft/tasks/: main.yaml
roles/generate-sbom-trivy/: README.rst
roles/generate-sbom-trivy/defaults/: main.yaml
roles/generate-sbom-trivy/tasks/: main.yaml
roles/upload-bom-to-dependencytrack/: README.rst
roles/upload-bom-to-dependencytrack/tasks/: main.yaml  upload.yaml
roles/upload-container-image1/tasks/: push.yaml
zuul.d/: container-jobs.yaml  gh_pipelines.yaml  jobs.yaml  nodesets.yaml  projects.yaml  sbom-jobs.yaml  secrets.yaml  timer_pipelines.yaml
